--- a/cutscene/resources/mainwindow_view.ui
+++ b/cutscene/resources/mainwindow_view.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>CutScene</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true"/>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
     <property name="leftMargin">
@@ -30,13 +33,6 @@
     <property name="spacing">
      <number>0</number>
     </property>
-    <item row="1" column="2">
-     <widget class="QListView" name="listView">
-      <property name="frameShadow">
-       <enum>QFrame::Plain</enum>
-      </property>
-     </widget>
-    </item>
     <item row="1" column="0">
      <widget class="QWidget" name="widget" native="true">
       <property name="minimumSize">
@@ -52,7 +48,7 @@
        </size>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(57, 57, 57);</string>
+       <string notr="true">background-color: rgb(35, 47, 52);</string>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
        <property name="spacing">
@@ -74,11 +70,17 @@
         <widget class="QLabel" name="label">
          <property name="font">
           <font>
-           <pointsize>11</pointsize>
+           <family>Segoe UI</family>
+           <pointsize>14</pointsize>
+           <weight>50</weight>
+           <italic>false</italic>
+           <bold>false</bold>
           </font>
          </property>
          <property name="styleSheet">
-          <string notr="true">color: rgb(255, 255, 255);</string>
+          <string notr="true">color: rgb(255, 255, 255);
+font: 14pt &quot;Segoe UI&quot;;
+margin-left: 5px;</string>
          </property>
          <property name="text">
           <string>Project Explorer</string>
@@ -88,7 +90,28 @@
        <item>
         <widget class="QTreeView" name="levelsView">
          <property name="styleSheet">
-          <string notr="true">color: rgb(255, 255, 255);</string>
+          <string notr="true">QTreeView {
+    show-decoration-selected: 1;
+	color: rgb(255, 255, 255);
+	font: 25 12pt &quot;Segoe UI Light&quot;;
+	outline: none;
+}
+
+QTreeView::item {
+	border-radius: 2px;
+	border: 0px;
+	margin: 3px;
+	padding: 5px;
+    color: rgb(255, 255, 255);
+}
+
+QTreeView::item:hover {
+    background: rgb(40, 57, 66)
+}
+
+QTreeView::item:selected {
+    background: rgb(52, 73, 85);
+}</string>
          </property>
          <property name="frameShape">
           <enum>QFrame::NoFrame</enum>
@@ -105,8 +128,14 @@
          <property name="editTriggers">
           <set>QAbstractItemView::AnyKeyPressed</set>
          </property>
+         <property name="showDropIndicator" stdset="0">
+          <bool>false</bool>
+         </property>
          <property name="dragEnabled">
           <bool>true</bool>
+         </property>
+         <property name="selectionMode">
+          <enum>QAbstractItemView::ContiguousSelection</enum>
          </property>
          <property name="indentation">
           <number>25</number>
@@ -114,95 +143,104 @@
          <property name="animated">
           <bool>true</bool>
          </property>
+         <property name="expandsOnDoubleClick">
+          <bool>false</bool>
+         </property>
          <attribute name="headerVisible">
           <bool>false</bool>
          </attribute>
+        </widget>
+       </item>
+       <item>
+        <widget class="QWidget" name="widget_2" native="true">
+         <property name="styleSheet">
+          <string notr="true">QPushButton {
+background-color: rgb(40, 57, 66);
+padding: 5px;
+border-radius: 3px
+}
+
+QPushButton:hover {
+background-color: rgb(52, 73, 85);
+padding: 5px;
+border-radius: 3px
+}</string>
+         </property>
+         <layout class="QHBoxLayout" name="horizontalLayout">
+          <item>
+           <widget class="QPushButton" name="addLevel">
+            <property name="toolTip">
+             <string>Add Level</string>
+            </property>
+            <property name="styleSheet">
+             <string notr="true"/>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+            <property name="icon">
+             <iconset resource="resources.qrc">
+              <normaloff>:/img/img/icons/add_box_white_48x48.png</normaloff>:/img/img/icons/add_box_white_48x48.png</iconset>
+            </property>
+            <property name="iconSize">
+             <size>
+              <width>30</width>
+              <height>30</height>
+             </size>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="addSubLevel">
+            <property name="toolTip">
+             <string>Add SubLevel</string>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+            <property name="icon">
+             <iconset resource="resources.qrc">
+              <normaloff>:/img/img/icons/library_add_white_48x48.png</normaloff>:/img/img/icons/library_add_white_48x48.png</iconset>
+            </property>
+            <property name="iconSize">
+             <size>
+              <width>30</width>
+              <height>30</height>
+             </size>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="addScene">
+            <property name="toolTip">
+             <string>Add Scene</string>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+            <property name="icon">
+             <iconset resource="resources.qrc">
+              <normaloff>:/img/img/icons/videogame_asset_white_48x48.png</normaloff>:/img/img/icons/videogame_asset_white_48x48.png</iconset>
+            </property>
+            <property name="iconSize">
+             <size>
+              <width>30</width>
+              <height>30</height>
+             </size>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </widget>
        </item>
       </layout>
      </widget>
     </item>
     <item row="1" column="1">
-     <widget class="QWidget" name="widget_2" native="true">
-      <property name="minimumSize">
-       <size>
-        <width>250</width>
-        <height>0</height>
-       </size>
+     <widget class="QListView" name="listView">
+      <property name="frameShadow">
+       <enum>QFrame::Plain</enum>
       </property>
-      <property name="maximumSize">
-       <size>
-        <width>250</width>
-        <height>16777215</height>
-       </size>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(61, 61, 61);</string>
-      </property>
-      <layout class="QVBoxLayout" name="verticalLayout_3">
-       <property name="spacing">
-        <number>5</number>
-       </property>
-       <property name="leftMargin">
-        <number>5</number>
-       </property>
-       <property name="topMargin">
-        <number>5</number>
-       </property>
-       <property name="rightMargin">
-        <number>5</number>
-       </property>
-       <property name="bottomMargin">
-        <number>5</number>
-       </property>
-       <item>
-        <widget class="QLabel" name="label_2">
-         <property name="font">
-          <font>
-           <family>MS Shell Dlg 2</family>
-           <pointsize>11</pointsize>
-          </font>
-         </property>
-         <property name="styleSheet">
-          <string notr="true">color: rgb(255, 255, 255);</string>
-         </property>
-         <property name="text">
-          <string>Scene Explorer</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QTreeView" name="sceneView">
-         <property name="cursor" stdset="0">
-          <cursorShape>ArrowCursor</cursorShape>
-         </property>
-         <property name="styleSheet">
-          <string notr="true">color: rgb(255, 255, 255);</string>
-         </property>
-         <property name="frameShape">
-          <enum>QFrame::NoFrame</enum>
-         </property>
-         <property name="frameShadow">
-          <enum>QFrame::Plain</enum>
-         </property>
-         <property name="lineWidth">
-          <number>1</number>
-         </property>
-         <property name="editTriggers">
-          <set>QAbstractItemView::AnyKeyPressed</set>
-         </property>
-         <property name="dragEnabled">
-          <bool>true</bool>
-         </property>
-         <property name="animated">
-          <bool>true</bool>
-         </property>
-         <property name="headerHidden">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-      </layout>
      </widget>
     </item>
    </layout>
@@ -310,6 +348,8 @@
    </property>
   </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
