--- a/cutscene/resources/mainwindow_view.ui
+++ b/cutscene/resources/mainwindow_view.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>910</width>
+    <width>1239</width>
     <height>683</height>
    </rect>
   </property>
@@ -37,13 +37,13 @@
      <widget class="QWidget" name="widget" native="true">
       <property name="minimumSize">
        <size>
-        <width>250</width>
+        <width>300</width>
         <height>0</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
-        <width>250</width>
+        <width>300</width>
         <height>16777215</height>
        </size>
       </property>
@@ -52,19 +52,19 @@
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
        <property name="spacing">
-        <number>5</number>
+        <number>10</number>
        </property>
        <property name="leftMargin">
-        <number>5</number>
+        <number>10</number>
        </property>
        <property name="topMargin">
-        <number>5</number>
+        <number>10</number>
        </property>
        <property name="rightMargin">
-        <number>5</number>
+        <number>10</number>
        </property>
        <property name="bottomMargin">
-        <number>5</number>
+        <number>10</number>
        </property>
        <item>
         <widget class="QLabel" name="label">
@@ -100,7 +100,8 @@ margin-left: 5px;</string>
 QTreeView::item {
 	border-radius: 2px;
 	border: 0px;
-	margin: 3px;
+	margin-top: 3px;
+	margin-bottom: 3px;
 	padding: 5px;
     color: rgb(255, 255, 255);
 }
@@ -167,8 +168,23 @@ border-radius: 3px
 }</string>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout">
+          <property name="spacing">
+           <number>10</number>
+          </property>
+          <property name="leftMargin">
+           <number>0</number>
+          </property>
+          <property name="topMargin">
+           <number>0</number>
+          </property>
+          <property name="rightMargin">
+           <number>0</number>
+          </property>
+          <property name="bottomMargin">
+           <number>0</number>
+          </property>
           <item>
-           <widget class="QPushButton" name="addLevel">
+           <widget class="QPushButton" name="buttonAddLevel">
             <property name="toolTip">
              <string>Add Level</string>
             </property>
@@ -180,7 +196,8 @@ border-radius: 3px
             </property>
             <property name="icon">
              <iconset resource="resources.qrc">
-              <normaloff>:/img/img/icons/add_box_white_48x48.png</normaloff>:/img/img/icons/add_box_white_48x48.png</iconset>
+              <normaloff>:/levelIcons/img/icons/levelIcons/add_box_white_96x96.png</normaloff>
+              <disabledoff>:/levelIcons/img/icons/levelIcons/add_box_grey_96x96.png</disabledoff>:/levelIcons/img/icons/levelIcons/add_box_white_96x96.png</iconset>
             </property>
             <property name="iconSize">
              <size>
@@ -191,7 +208,7 @@ border-radius: 3px
            </widget>
           </item>
           <item>
-           <widget class="QPushButton" name="addSubLevel">
+           <widget class="QPushButton" name="buttonAddSubLevel">
             <property name="toolTip">
              <string>Add SubLevel</string>
             </property>
@@ -200,7 +217,8 @@ border-radius: 3px
             </property>
             <property name="icon">
              <iconset resource="resources.qrc">
-              <normaloff>:/img/img/icons/library_add_white_48x48.png</normaloff>:/img/img/icons/library_add_white_48x48.png</iconset>
+              <normaloff>:/levelIcons/img/icons/levelIcons/library_add_white_96x96.png</normaloff>
+              <disabledoff>:/levelIcons/img/icons/levelIcons/library_add_grey_96x96.png</disabledoff>:/levelIcons/img/icons/levelIcons/library_add_white_96x96.png</iconset>
             </property>
             <property name="iconSize">
              <size>
@@ -211,7 +229,7 @@ border-radius: 3px
            </widget>
           </item>
           <item>
-           <widget class="QPushButton" name="addScene">
+           <widget class="QPushButton" name="buttonAddScene">
             <property name="toolTip">
              <string>Add Scene</string>
             </property>
@@ -220,7 +238,8 @@ border-radius: 3px
             </property>
             <property name="icon">
              <iconset resource="resources.qrc">
-              <normaloff>:/img/img/icons/videogame_asset_white_48x48.png</normaloff>:/img/img/icons/videogame_asset_white_48x48.png</iconset>
+              <normaloff>:/levelIcons/img/icons/levelIcons/videogame_asset_white_96x96.png</normaloff>
+              <disabledoff>:/levelIcons/img/icons/levelIcons/videogame_asset_grey_96x96.png</disabledoff>:/levelIcons/img/icons/levelIcons/videogame_asset_white_96x96.png</iconset>
             </property>
             <property name="iconSize">
              <size>
@@ -250,7 +269,7 @@ border-radius: 3px
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>910</width>
+     <width>1239</width>
      <height>26</height>
     </rect>
    </property>
