--- a/CutScene/resources/resources.qrc
+++ b/CutScene/resources/resources.qrc
@@ -7,4 +7,9 @@
     <file>img/icons/levelIcons/videogame_asset_grey_96x96.png</file>
     <file>img/icons/levelIcons/videogame_asset_white_96x96.png</file>
   </qresource>
+  <qresource prefix="levelViewIcons">
+    <file>img/icons/levelViewIcons/box_white_96x96.png</file>
+    <file>img/icons/levelViewIcons/library_white_96x96.png</file>
+    <file>img/icons/levelViewIcons/videogame_white_96x96.png</file>
+  </qresource>
 </RCC>
