--- a/cutscene/resources/mainwindow_view.ui
+++ b/cutscene/resources/mainwindow_view.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1239</width>
-    <height>683</height>
+    <width>1432</width>
+    <height>934</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -33,7 +33,7 @@
     <property name="spacing">
      <number>0</number>
     </property>
-    <item row="1" column="0">
+    <item row="3" column="0">
      <widget class="QWidget" name="widget" native="true">
       <property name="minimumSize">
        <size>
@@ -255,11 +255,103 @@ border-radius: 3px
       </layout>
      </widget>
     </item>
-    <item row="1" column="1">
-     <widget class="QListView" name="listView">
-      <property name="frameShadow">
-       <enum>QFrame::Plain</enum>
-      </property>
+    <item row="3" column="1">
+     <widget class="QWidget" name="widget_3" native="true">
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <property name="spacing">
+        <number>10</number>
+       </property>
+       <property name="leftMargin">
+        <number>0</number>
+       </property>
+       <property name="topMargin">
+        <number>0</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
+        <number>10</number>
+       </property>
+       <item>
+        <widget class="QGraphicsView" name="sceneView">
+         <property name="acceptDrops">
+          <bool>false</bool>
+         </property>
+         <property name="frameShadow">
+          <enum>QFrame::Plain</enum>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QWidget" name="widget_4" native="true">
+         <property name="styleSheet">
+          <string notr="true">QPushButton {
+background-color: rgb(40, 57, 66);
+padding: 5px;
+border-radius: 3px
+}
+
+QPushButton:hover {
+background-color: rgb(52, 73, 85);
+padding: 5px;
+border-radius: 3px
+}</string>
+         </property>
+         <layout class="QHBoxLayout" name="horizontalLayout_2">
+          <property name="spacing">
+           <number>10</number>
+          </property>
+          <property name="leftMargin">
+           <number>10</number>
+          </property>
+          <property name="topMargin">
+           <number>0</number>
+          </property>
+          <property name="rightMargin">
+           <number>10</number>
+          </property>
+          <property name="bottomMargin">
+           <number>0</number>
+          </property>
+          <item>
+           <widget class="QPushButton" name="pushButton">
+            <property name="text">
+             <string/>
+            </property>
+            <property name="icon">
+             <iconset resource="resources.qrc">
+              <normaloff>:/levelIcons/img/icons/levelIcons/add_box_grey_96x96.png</normaloff>:/levelIcons/img/icons/levelIcons/add_box_grey_96x96.png</iconset>
+            </property>
+            <property name="iconSize">
+             <size>
+              <width>30</width>
+              <height>30</height>
+             </size>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="pushButton_2">
+            <property name="text">
+             <string/>
+            </property>
+            <property name="icon">
+             <iconset resource="resources.qrc">
+              <normaloff>:/levelIcons/img/icons/levelIcons/videogame_asset_grey_96x96.png</normaloff>:/levelIcons/img/icons/levelIcons/videogame_asset_grey_96x96.png</iconset>
+            </property>
+            <property name="iconSize">
+             <size>
+              <width>30</width>
+              <height>30</height>
+             </size>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+      </layout>
      </widget>
     </item>
    </layout>
@@ -269,7 +361,7 @@ border-radius: 3px
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1239</width>
+     <width>1432</width>
      <height>26</height>
     </rect>
    </property>
