--- a/CutScene/resources/resources.qrc
+++ b/CutScene/resources/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="levelIcons">
+    <file>img/icons/levelIcons/create_white_96x96.png</file>
     <file>img/icons/levelIcons/add_box_grey_96x96.png</file>
     <file>img/icons/levelIcons/add_box_white_96x96.png</file>
     <file>img/icons/levelIcons/library_add_grey_96x96.png</file>
