--- a/cutscene/resources/mainwindow_view.ui
+++ b/cutscene/resources/mainwindow_view.ui
@@ -48,7 +48,9 @@
        </size>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(35, 47, 52);</string>
+       <string notr="true">background-color: rgb(35, 47, 52);
+
+</string>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
        <property name="spacing">
@@ -150,6 +152,49 @@ QTreeView::item:selected {
          <attribute name="headerVisible">
           <bool>false</bool>
          </attribute>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="buttonCreateProject">
+         <property name="toolTip">
+          <string>Create Project</string>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton {
+color: rgb(255, 255, 255);
+font: 9pt &quot;Segoe UI&quot;;
+background-color: rgb(40, 57, 66);
+padding: 5px;
+border-radius: 3px
+}
+
+QPushButton:hover {
+background-color: rgb(52, 73, 85);
+padding: 5px;
+border-radius: 3px
+}
+
+</string>
+         </property>
+         <property name="text">
+          <string>Create Project</string>
+         </property>
+         <property name="icon">
+          <iconset resource="resources.qrc">
+           <normaloff>:/levelIcons/img/icons/levelIcons/create_white_96x96.png</normaloff>:/levelIcons/img/icons/levelIcons/create_white_96x96.png</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>30</width>
+           <height>30</height>
+          </size>
+         </property>
+         <property name="autoDefault">
+          <bool>false</bool>
+         </property>
+         <property name="flat">
+          <bool>false</bool>
+         </property>
         </widget>
        </item>
        <item>
