--- a/cutscene/resources/mainwindow_view.ui
+++ b/cutscene/resources/mainwindow_view.ui
@@ -213,6 +213,12 @@ QPushButton:hover {
 background-color: rgb(52, 73, 85);
 padding: 5px;
 border-radius: 3px
+}
+
+QPushButton:active {
+background-color: rgb(52, 73, 85);
+padding: 5px;
+border-radius: 3px
 }</string>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout">
@@ -310,7 +316,7 @@ border-radius: 3px
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>308</width>
+         <width>801</width>
          <height>40</height>
         </rect>
        </property>
@@ -322,6 +328,12 @@ border-radius: 3px
 }
 
 QPushButton:hover {
+background-color: rgb(200, 200, 200);
+padding: 5px;
+border-radius: 3px
+}
+
+QPushButton:checked {
 background-color: rgb(200, 200, 200);
 padding: 5px;
 border-radius: 3px
@@ -418,10 +430,101 @@ border-radius: 3px
             <height>30</height>
            </size>
           </property>
+          <property name="checkable">
+           <bool>false</bool>
+          </property>
          </widget>
         </item>
         <item>
          <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::Fixed</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QPushButton" name="buttonManipulate">
+          <property name="toolTip">
+           <string>Move Item</string>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+          <property name="icon">
+           <iconset resource="resources.qrc">
+            <normaloff>:/visualModeIcons/img/icons/visualModeIcons/pan_tool_black_96x96.png</normaloff>:/visualModeIcons/img/icons/visualModeIcons/pan_tool_black_96x96.png</iconset>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>30</width>
+            <height>30</height>
+           </size>
+          </property>
+          <property name="checkable">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="buttonConnect">
+          <property name="toolTip">
+           <string>Connect Items</string>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+          <property name="icon">
+           <iconset resource="resources.qrc">
+            <normaloff>:/visualModeIcons/img/icons/visualModeIcons/timeline_black_96x96.png</normaloff>:/visualModeIcons/img/icons/visualModeIcons/timeline_black_96x96.png</iconset>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>30</width>
+            <height>30</height>
+           </size>
+          </property>
+          <property name="checkable">
+           <bool>true</bool>
+          </property>
+          <property name="checked">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="buttonDelete">
+          <property name="toolTip">
+           <string>Remove Connection</string>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+          <property name="icon">
+           <iconset resource="resources.qrc">
+            <normaloff>:/visualModeIcons/img/icons/visualModeIcons/remove_circle_black_96x96.png</normaloff>:/visualModeIcons/img/icons/visualModeIcons/remove_circle_black_96x96.png</iconset>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>30</width>
+            <height>30</height>
+           </size>
+          </property>
+          <property name="checkable">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer_3">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
