--- a/CutScene/resources/visualmodeelement_view.ui
+++ b/CutScene/resources/visualmodeelement_view.ui
@@ -6,15 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>375</width>
-    <height>169</height>
+    <width>330</width>
+    <height>127</height>
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Fixed" vsizetype="MinimumExpanding">
+   <sizepolicy hsizetype="Ignored" vsizetype="MinimumExpanding">
     <horstretch>0</horstretch>
     <verstretch>1</verstretch>
    </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>0</width>
+    <height>0</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -91,20 +97,119 @@ border-radius: 3px
     </widget>
    </item>
    <item>
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QPushButton" name="controlButton">
+       <property name="toolTip">
+        <string>Add Controls</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="resources.qrc">
+         <normaloff>:/visualModeIcons/img/icons/visualModeIcons/keyboard_black_96x96.png</normaloff>:/visualModeIcons/img/icons/visualModeIcons/keyboard_black_96x96.png</iconset>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="actionButton">
+       <property name="toolTip">
+        <string>Add Action/Description</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="resources.qrc">
+         <normaloff>:/visualModeIcons/img/icons/visualModeIcons/comment_black_96x96.png</normaloff>:/visualModeIcons/img/icons/visualModeIcons/comment_black_96x96.png</iconset>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pseudocodeButton">
+       <property name="toolTip">
+        <string>Add Pseudocode</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="resources.qrc">
+         <normaloff>:/visualModeIcons/img/icons/visualModeIcons/code_black_96x96.png</normaloff>:/visualModeIcons/img/icons/visualModeIcons/code_black_96x96.png</iconset>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="physicsButton">
+       <property name="toolTip">
+        <string>Add Physics</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="resources.qrc">
+         <normaloff>:/visualModeIcons/img/icons/visualModeIcons/vertical_align_bottom_black_96x96.png</normaloff>:/visualModeIcons/img/icons/visualModeIcons/vertical_align_bottom_black_96x96.png</iconset>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="headingButton">
+       <property name="toolTip">
+        <string>Add Heading</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="resources.qrc">
+         <normaloff>:/visualModeIcons/img/icons/visualModeIcons/title_black_96x96.png</normaloff>:/visualModeIcons/img/icons/visualModeIcons/title_black_96x96.png</iconset>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="dialogueButton">
+       <property name="toolTip">
+        <string>Add Dialog</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="resources.qrc">
+         <normaloff>:/visualModeIcons/img/icons/visualModeIcons/record_voice_over_black_96x96.png</normaloff>:/visualModeIcons/img/icons/visualModeIcons/record_voice_over_black_96x96.png</iconset>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="actButton">
+       <property name="toolTip">
+        <string>Add Act</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="resources.qrc">
+         <normaloff>:/visualModeIcons/img/icons/visualModeIcons/movie_black_96x96.png</normaloff>:/visualModeIcons/img/icons/visualModeIcons/movie_black_96x96.png</iconset>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="transitionButton">
+       <property name="toolTip">
+        <string>Add Transition</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="resources.qrc">
+         <normaloff>:/visualModeIcons/img/icons/visualModeIcons/swap_horiz_black_96x96.png</normaloff>:/visualModeIcons/img/icons/visualModeIcons/swap_horiz_black_96x96.png</iconset>
+       </property>
+      </widget>
+     </item>
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
